# ptp

./: .gitignore  Dockerfile-paxos  Dockerfile-submitter  README.md  docker-compose.yaml  ptp.cabal  stack.yaml
ptp-monitor/: ptp-monitor.cabal
ptp-monitor-src/: Main.hs
ptp-monitor/src/: Main.hs
ptp-paxos/: ptp-paxos.cabal
ptp-paxos-src/: Main.hs
ptp-paxos-src/Entity/: Host.hs  Id.hs  Port.hs  SequenceNum.hs  Topic.hs  Value.hs
ptp-paxos-src/Server/: LocalFileStorage.hs
ptp-paxos-src/Server/Paxos/: Acceptor.hs  Learner.hs
ptp-paxos-test/: Tests.hs
ptp-paxos/src/: Main.hs  Quorum.hs
ptp-paxos/src/Client/: PaxosClient.hs
ptp-paxos/src/Entity/: Host.hs  Id.hs  Node.hs  Port.hs  Proposal.hs  ProposalNumber.hs  SequenceNum.hs  Topic.hs  TopicSeqnum.hs  Uniq.hs  Value.hs
ptp-paxos/src/Requests/: Accept.hs  Learn.hs  Peek.hs  Prepare.hs  Propose.hs
ptp-paxos/src/Server/: InMemStorage.hs  LocalFileStorage.hs  Locks.hs
ptp-paxos/src/Server/Paxos/: Acceptor.hs  Learner.hs  PaxosNode.hs  Proposer.hs
ptp-paxos/test/: Tests.hs
ptp-store/: ptp-store.cabal
ptp-store/src/: HashMapStorage.hs  SqliteStorage.hs  Storage.hs
ptp-submitter/: ptp-submitter.cabal
ptp-submitter-src/: Journal.hs  Main.hs  PubSub.hs  Submitter.hs  SubmitterApi.hs  SubmitterNode.hs
ptp-submitter-src/Client/: SubmitterClient.hs
ptp-submitter-src/Entity/: ClusterHash.hs
ptp-submitter-src/Requests/: State.hs
ptp-submitter/dist-newstyle/cache/: compiler  config
ptp-submitter/src/: Journal.hs  Main.hs  PubSub.hs  Submitter.hs  SubmitterApi.hs  SubmitterNode.hs
ptp-submitter/src/Client/: SubmitterClient.hs
ptp-submitter/src/Entity/: ClusterHash.hs  Decree.hs  Msg.hs
ptp-submitter/src/Requests/: ForgetLeader.hs  State.hs
src/: Journal.hs  Main.hs  Node.hs  NodeApi.hs  Port.hs  Proposal.hs  ProposalNumber.hs  Quorum.hs  Runner.hs  SequenceNum.hs  Topic.hs  Types.hs  WebNode.hs  WebNodeClient.hs
src-paxos/: Main.hs
src-paxos/Client/: PaxosClient.hs
src-paxos/Entity/: Host.hs  Node.hs  Port.hs  Proposal.hs  ProposalNumber.hs  Uniq.hs
src-paxos/Requests/: Learn.hs  Propose.hs
src-paxos/Server/: InMemStorage.hs  Locks.hs  PaxosApi.hs  Storage.hs
src-paxos/Server/Paxos/: PaxosNode.hs  Proposer.hs
src-submitter/: Main.hs  Submitter.hs  SubmitterApi.hs  SubmitterNode.hs
src-submitter/Client/: SubmitterClient.hs
src-submitter/Entity/: ClusterHash.hs  Decree.hs  Msg.hs
src-submitter/Requests/: CreateTopic.hs  Submit.hs  Sync.hs
src/Client/: ExternalClient.hs  InternalClient.hs  WebNodeClient.hs
src/Entity/: AcceptRequest.hs  CatchupRequest.hs  CatchupResponse.hs  CreateTopicRequest.hs  CreateTopicResponse.hs  EmptyResponse.hs  Id.hs  Key.hs  LearnRequest.hs  Nack.hs  Node.hs  PeerRequest.hs  PeerResponse.hs  Port.hs  PrepareRequest.hs  PrepareResponse.hs  Promise.hs  Proposal.hs  ProposalNumber.hs  ProposeRequest.hs  ProposeResponse.hs  SequenceNum.hs  SubmitRequest.hs  SubmitResponse.hs  Topic.hs  Value.hs  ValueResponse.hs
src/Requests/: Accept.hs  Catchup.hs  CreateTopic.hs  Join.hs  JoinCluster.hs  Learn.hs  Ping.hs  Prepare.hs  Propose.hs  ReadJournal.hs  SequenceNum.hs  Submit.hs  SubmitCluster.hs  SubmitNode.hs
src/Server/: CallbackMap.hs  ExternalApi.hs  Files.hs  InternalApi.hs  Keylocks.hs  Locks.hs  NodeApi.hs  WebNode.hs
src/Server/Paxos/: Acceptor.hs  AcceptorState.hs  Executor.hs  Learner.hs  LearnerState.hs  Proposer.hs  StateMachine.hs
test/: Tests.hs
