cabal-version:       2.2
name:                ptp
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md

common deps
  default-language: Haskell2010
  build-depends:    async,
                    base,
                    binary,
                    bytestring,
                    containers,
                    deepseq,
                    directory,
                    hashable,
                    http-client,
                    safe,
                    safe-exceptions,
                    serialise,
                    servant,
                    servant-client,
                    servant-server,
                    split,
                    stm,
                    stm-containers,
                    transformers,
                    uuid,
                    warp

library paxos-lib
  import:              deps
  ghc-options:         -Wall -O3
  hs-source-dirs:      src-paxos
  default-language:    Haskell2010
  exposed-modules:     Client.PaxosClient
                       Entity.Id
                       Entity.Node
                       Entity.Port
                       Entity.Proposal
                       Entity.SequenceNum
                       Entity.Topic
                       Entity.Uniq
                       Entity.Value
                       Requests.Accept
                       Requests.Learn
                       Requests.Peek
                       Requests.Prepare
                       Requests.Propose
                       Server.InMemStorage
                       Server.LocalFileStorage
                       Server.Locks
                       Server.Paxos.Acceptor
                       Server.Paxos.Learner
                       Server.Paxos.PaxosNode
                       Server.Paxos.Proposer
                       Server.PaxosApi
                       Server.Storage
  other-modules:       Entity.ProposalNumber
                       Quorum

executable paxos-bin
  import:              deps
  ghc-options:         -Wall -O3 -threaded
  hs-source-dirs:      src-paxos
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       paxos-lib
  other-modules:       Client.PaxosClient
                       Entity.Id
                       Entity.Node
                       Entity.Port
                       Entity.Proposal
                       Entity.ProposalNumber
                       Entity.SequenceNum
                       Entity.Topic
                       Entity.Uniq
                       Entity.Value
                       Quorum
                       Requests.Accept
                       Requests.Learn
                       Requests.Peek
                       Requests.Prepare
                       Requests.Propose
                       Server.LocalFileStorage
                       Server.Locks
                       Server.Paxos.Acceptor
                       Server.Paxos.Learner
                       Server.Paxos.PaxosNode
                       Server.Paxos.Proposer
                       Server.PaxosApi
                       Server.Storage

test-suite test-paxos-lib
  import:           deps
  ghc-options:      -Wall -O3
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  build-depends:    paxos-lib, list-t, random, split
  hs-source-dirs:   test
  default-language: Haskell2010

executable submitter
  import:              deps
  ghc-options:         -Wall -O3 -threaded
  hs-source-dirs:      src-submitter
  main-is:             Main.hs
  other-modules:       Client.SubmitterClient,
                       Entity.ClusterHash,
                       Entity.Decree,
                       Entity.Msg,
                       Requests.CreateTopic
                       Requests.Submit,
                       Requests.Sync,
                       Submitter,
                       SubmitterNode,
                       SubmitterApi,
                       Journal,
                       PubSub
  default-language:    Haskell2010
  build-depends:       paxos-lib,
                       list-t,
                       random
