cabal-version:       2.4
name:                ptp-paxos
version:             0.1.0.0
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple

common ptp-paxos-deps
  default-language: Haskell2010
  build-depends:    async, base, containers, deepseq, hashable, http-client, safe, safe-exceptions, serialise, servant, servant-client, servant-server, stm, stm-containers, transformers, uuid, warp

library ptp-paxos-lib
  import:              ptp-paxos-deps
  default-language:    Haskell2010
  ghc-options:         -Wall -O3
  hs-source-dirs:      ptp-paxos-src
  exposed-modules:     Client.PaxosClient
                       Entity.Host
                       Entity.Topic
                       Entity.Id
                       Entity.Node
                       Entity.Port
                       Entity.SequenceNum
                       Entity.Uniq
                       Entity.Value
                       Requests.Peek
                       Requests.Propose
                       Server.InMemStorage
                       Server.Paxos.Acceptor
                       Server.Paxos.Learner
                       Server.Paxos.PaxosNode
  other-modules:       Entity.Proposal
                       Entity.ProposalNumber
                       Requests.Accept
                       Requests.Learn
                       Requests.Prepare
                       Server.Locks
                       Server.PaxosApi
                       Server.Paxos.Proposer
                       Server.Storage
                       Quorum

test-suite ptp-paxos-test
  import:           ptp-paxos-deps
  ghc-options:      -Wall -O3
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  build-depends:    ptp-paxos-lib, list-t, random, split
  hs-source-dirs:   ptp-paxos-test
  default-language: Haskell2010

executable ptp-paxos-bin
  import:              ptp-paxos-deps
  default-language:    Haskell2010
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       directory
  hs-source-dirs:      ptp-paxos-src
  other-modules:       Client.PaxosClient
                       Entity.Host
                       Entity.Id
                       Entity.Node
                       Entity.Port
                       Entity.Proposal
                       Entity.ProposalNumber
                       Entity.SequenceNum
                       Entity.Topic
                       Entity.Uniq
                       Entity.Value
                       Quorum
                       Requests.Accept
                       Requests.Learn
                       Requests.Peek
                       Requests.Prepare
                       Requests.Propose
                       Server.LocalFileStorage
                       Server.Locks
                       Server.Paxos.Acceptor
                       Server.Paxos.Learner
                       Server.Paxos.PaxosNode
                       Server.Paxos.Proposer
                       Server.PaxosApi
                       Server.Storage

executable ptp-submitter-bin
  ghc-options:         -Wall -O3
  main-is:             Main.hs
  build-depends:       ptp-paxos-lib, async, base, hashable, http-client, containers, random, serialise, servant, servant-client, servant-server, stm, stm-containers, warp
  default-language:    Haskell2010
  hs-source-dirs:      ptp-submitter-src
  other-modules:       Client.SubmitterClient
                       Entity.ClusterHash
                       Entity.Decree
                       Entity.Msg
                       Requests.CreateTopic
                       Requests.Submit
                       Requests.Sync
                       Submitter
                       SubmitterApi
                       SubmitterNode
