cabal-version:       2.4

name:                ptp-monitor
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
extra-source-files:  CHANGELOG.md

executable ptp-monitor
  ghc-options:         -Wall -O3 -threaded
  build-depends:       aeson, base, brick, bytestring, http-client, ptp-paxos, ptp-submitter, vty
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
