cabal-version:       2.4

name:                ptp-paxos
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
extra-source-files:  CHANGELOG.md

common ptp-paxos-deps
  default-language: Haskell2010
  build-depends:    aeson, base, http-client, ptp-store, rio, safe, safe-exceptions, serialise, servant, servant-client, servant-server, stm, stm-containers, transformers, uuid, warp

library
  import:              ptp-paxos-deps
  exposed-modules:     Client.PaxosClient
                       Entity.Host
                       Entity.Id
                       Entity.Node
                       Entity.Port
                       Entity.SequenceNum
                       Entity.Topic
                       Entity.Uniq
                       Entity.Value
                       Requests.Peek
                       Requests.Propose
                       Server.Paxos.Acceptor
                       Server.Paxos.Learner
                       Server.Paxos.PaxosNode
  other-modules:       Entity.Proposal
                       Entity.ProposalNumber
                       Quorum
                       Requests.Accept
                       Requests.Learn
                       Requests.Prepare
                       Server.Locks
                       Server.Paxos.Proposer
                       Server.Storage
                       Server.PaxosApi
  hs-source-dirs:      src

executable ptp-paxos
  import:              ptp-paxos-deps
  ghc-options:         -Wall -O3 -threaded
  other-modules:       Client.PaxosClient
                       Entity.Host
                       Entity.Id
                       Entity.Node
                       Entity.Port
                       Entity.Proposal
                       Entity.ProposalNumber
                       Entity.SequenceNum
                       Entity.Topic
                       Entity.Uniq
                       Entity.Value
                       Quorum
                       Requests.Accept
                       Requests.Learn
                       Requests.Peek
                       Requests.Prepare
                       Requests.Propose
                       Server.LocalFileStorage
                       Server.Locks
                       Server.Paxos.Acceptor
                       Server.Paxos.Learner
                       Server.Paxos.PaxosNode
                       Server.Paxos.Proposer
                       Server.PaxosApi
                       Server.Storage
  main-is:             Main.hs
  hs-source-dirs:      src

test-suite ptp-paxos-test
  import:              ptp-paxos-deps
  ghc-options:         -Wall -O3 -threaded
  build-depends:       list-t, ptp-paxos, random, split
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
