cabal-version:       2.4

name:                ptp-submitter
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
extra-source-files:  CHANGELOG.md

common ptp-submitter-deps
  default-language: Haskell2010
  build-depends:    aeson, base, hashable, http-client, list-t, ptp-paxos, random, rio, safe, safe-exceptions, serialise, servant, servant-client, servant-server, split, stm, stm-containers, uuid, warp

library
  import:              ptp-submitter-deps
  ghc-options:         -Wall -O3
  exposed-modules:     Client.SubmitterClient
                       Requests.State
  other-modules:       Entity.Decree
                       Requests.CreateTopic
                       Requests.ForgetLeader
                       Requests.Submit
                       Requests.Sync
                       SubmitterApi
  hs-source-dirs:      src
  default-language:    Haskell2010

executable ptp-submitter
  import:              ptp-submitter-deps
  ghc-options:         -Wall -O3 -threaded
  other-modules:       Client.SubmitterClient
                       Entity.ClusterHash
                       Entity.Decree
                       Entity.Msg
                       Requests.CreateTopic
                       Requests.ForgetLeader
                       Requests.State
                       Requests.Submit
                       Requests.Sync
                       Submitter
                       SubmitterApi
                       SubmitterNode
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite ptp-submitter-test
  default-language:    Haskell2010
  ghc-options:         -Wall -O3 -threaded
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base
